--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@ body {
   height: 120%;
   font-family: "Josefin Sans", sans-serif;
 }
+
 a {
   text-decoration: none;
 }
@@ -297,6 +298,9 @@ input[type="file"] {
   margin-top: 32px;
 }
 /* TEMPLATE 2 */
+#app {
+  padding-bottom: 50px;
+}
 .table-responsive {
   overflow-x: auto;
 }
@@ -314,8 +318,8 @@ input[type="file"] {
 .table th,
 .table td {
   padding: 8px;
-  text-align: left;
-  vertical-align: top;
+  vertical-align: middle;
+  text-align: center;
 }
 
 .table thead th {
@@ -332,7 +336,8 @@ input[type="file"] {
 }
 
 .tambah-saudara,
-.tambah-anak {
+.tambah-anak,
+.tambah-kuliah {
   padding: 5px 10px;
   font-size: 14px;
   background-color: #0056b3;
@@ -342,11 +347,13 @@ input[type="file"] {
   cursor: pointer;
 }
 .hapus-saudara,
-.hapus-anak {
+.hapus-anak,
+.hapus-kuliah {
   background-color: red;
 }
 .hapus-anak i,
-.hapus-saudara i {
+.hapus-saudara i,
+.hapus-kuliah i {
   font-size: 12px;
   color: #ffffff;
 }
@@ -357,5 +364,9 @@ input[type="file"] {
 }
 .tambah-anak::after {
   content: "Anak";
+  color: rgb(255, 255, 255);
+}
+.tambah-kuliah::after {
+  content: "Kuliah";
   color: rgb(255, 255, 255);
 }
