--- a/src/components/login.css
+++ b/src/components/login.css
@@ -2,10 +2,8 @@
 
 .container {
   position: relative;
-  perspective: 1000px;
   width: 100%;
   height: 100vh;
-  overflow: hidden;
 }
 
 .forms-container {
@@ -16,7 +14,8 @@
   left: 0;
 }
 
-.signin-signup {
+.signin-signup,
+.forgotpass {
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -35,7 +34,7 @@ form {
   flex-direction: column;
   padding: 0rem 5rem;
   transition: all 0.2s 0.7s;
-  overflow: hidden;
+
   grid-column: 1 / 2;
   grid-row: 1 / 2;
 }
@@ -46,8 +45,78 @@ form.sign-up-form {
 }
 
 form.sign-in-form {
+  opacity: 1;
   z-index: 2;
 }
+.password-form {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-image: linear-gradient(to bottom, #4481eb, #04befe);
+  padding: 30px;
+  border-radius: 40px;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  z-index: 999;
+  width: 400px;
+  -webkit-border-radius: 40px;
+  -moz-border-radius: 40px;
+  -ms-border-radius: 40px;
+  -o-border-radius: 40px;
+}
+
+.password-form.hidden {
+  visibility: hidden;
+}
+
+.password-form.show {
+  opacity: 1;
+}
+
+.password-form h3 {
+  color: #ffffff;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.password-form label {
+  display: block;
+  margin-bottom: 10px;
+  color: #ffffff;
+}
+
+.password-form input[type="email"],
+.password-form input[type="password"] {
+  width: 100%;
+  padding: 12px;
+  border: none;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  background-color: rgba(255, 255, 255, 0.9);
+  color: #333333;
+}
+
+.password-form button[type="submit"] {
+  width: 100%;
+  padding: 12px;
+  border: none;
+  border-radius: 5px;
+  background-color: #ffffff;
+  color: #4481eb;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.password-form button[type="submit"]:hover {
+  background-color: #04befe;
+  color: #ffffff;
+}
+
+/* form.forgot-password-form {
+  opacity: 0;
+  z-index: 1;
+} */
 
 .title {
   font-size: 2.2rem;
@@ -161,13 +230,18 @@ form.sign-in-form {
   border-radius: 50%;
   z-index: 6;
   opacity: 0;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
 }
 .container.animate:before {
   opacity: 1;
   transition: all 1.5s ease-in-out;
 }
 .image {
-  width: 100%;
+  height: 200px;
+  width: 80%;
   transition: transform 1.1s ease-in-out;
   transition-delay: 0.4s;
 }
@@ -183,12 +257,12 @@ form.sign-in-form {
 
 .left-panel {
   pointer-events: all;
-  padding: 3rem 17% 2rem 12%;
+  padding: 0 30% 2rem 7%;
 }
 
 .right-panel {
   pointer-events: none;
-  padding: 3rem 12% 2rem 17%;
+  padding: 0 30% 2rem 12%;
 }
 
 .panel .content {
@@ -221,6 +295,17 @@ form.sign-in-form {
 .right-panel .image,
 .right-panel .content {
   transform: translateX(800px);
+  -webkit-transform: translateX(800px);
+  -moz-transform: translateX(800px);
+  -ms-transform: translateX(800px);
+  -o-transform: translateX(800px);
+}
+.panel.left-panel .forgot-password {
+  display: none;
+}
+
+.container.sign-up-mode .panel.left-panel .forgot-password {
+  display: block;
 }
 
 /* ANIMATION */
@@ -249,7 +334,22 @@ form.sign-in-form {
   opacity: 0;
   z-index: 1;
 }
-
+/* .container.sign-up-mode form.forgot-password-form {
+  opacity: 0;
+  z-index: 1;
+}
+.container.forgot-password-mode form.forgot-password-form {
+  opacity: 1;
+  z-index: 2;
+}
+.container.forgot-password-mode form.sign-up-form {
+  opacity: 0;
+  z-index: 1;
+}
+.container.forgot-password-mode form.sign-in-form {
+  opacity: 0;
+  z-index: 1;
+} */
 .container.sign-up-mode .right-panel .image,
 .container.sign-up-mode .right-panel .content {
   transform: translateX(0%);
@@ -262,13 +362,46 @@ form.sign-in-form {
 .container.sign-up-mode .right-panel {
   pointer-events: all;
 }
+/* .container.forgot-password-mode .panel.left-panel .forgot-password {
+  display: block;
+}
+
+.container.forgot-password-mode .panel.left-panel .content {
+  transform: translateX(-800px);
+}
+
+.container.forgot-password-mode .right-panel .content {
+  transform: translateX(800px);
+}
+
+.container.forgot-password-mode:before {
+  transform: translate(100%, -50%);
+  right: 52%;
+}
+
+.container.forgot-password-mode .signin-signup {
+  left: 25%;
+  transition: left 0.8s ease-in-out;
+} */
+/* .forgot-password-form-container {
+  display: none;
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.5s ease-in-out;
+}
+
+.forgot-password-form-container.show {
+  display: block;
+  max-height: 200px;
+} */
 
 @media (max-width: 870px) {
   .container {
     min-height: 800px;
     height: 100vh;
   }
-  .signin-signup {
+  .signin-signup,
+  .forgotpass {
     width: 100%;
     top: 95%;
     transform: translate(-50%, -100%);
