--- a/src/components/style.css
+++ b/src/components/style.css
@@ -212,7 +212,7 @@ textarea {
 
 textarea {
   width: 100%;
-  height: 150px;
+  height: 200px;
   padding: 12px 20px;
   box-sizing: border-box;
   border-radius: 4px;
@@ -326,7 +326,7 @@ input[type="file"] {
 .table th,
 .table td {
   padding: 8px;
-  vertical-align: middle;
+  vertical-align: text-top;
   text-align: center;
 }
 
@@ -347,10 +347,12 @@ input[type="file"] {
 .tambah-kuliah,
 .tambah-kursus,
 .tambah-bahasa,
-.tambah-sosial {
-  padding: 5px 10px;
-  font-size: 14px;
+.tambah-sosial,
+.tambah-riwayat,
+.tambah-referensi {
+  font-size: 15px;
   background-color: #0056b3;
+
   color: #fff;
   border: none;
   border-radius: 3px;
@@ -361,6 +363,7 @@ input[type="file"] {
 }
 .hapus i {
   font-size: 12px;
+  height: 5px;
   color: #ffffff;
 }
 
@@ -388,8 +391,15 @@ input[type="file"] {
   content: "Kegiatan Sosial";
   color: rgb(255, 255, 255);
 }
+.tambah-riwayat::after {
+  content: "Riwayat";
+  color: rgb(255, 255, 255);
+}
+.tambah-referensi::after {
+  content: "Referensi";
+  color: rgb(255, 255, 255);
+}
 .container-hobi {
-  margin: 0 auto;
   border: 1px solid #ddd;
   padding: 10px;
 }
@@ -407,4 +417,34 @@ input[type="file"] {
 
 .table-hobi th {
   text-align: center;
+}
+table.table-hobi th:first-child,
+table.table-hobi td:first-child {
+  width: 20%;
+}
+
+table.table-hobi th:last-child,
+table.table-hobi td:last-child {
+  width: 70%;
+}
+.container-validation {
+  margin: 0 30px;
+  border: 2px solid #333;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  background-color: #ffffff;
+}
+
+#pertanyaan td {
+  border: 1px solid #ddd;
+}
+
+#pertanyaan td:nth-child(2),
+#pertanyaan td:nth-child(3) {
+  width: 30px;
+}
+
+#pertanyaan td:nth-child(4) {
+  width: 600px;
 }
