--- a/src/components/login.css
+++ b/src/components/login.css
@@ -236,11 +236,19 @@ form.sign-in-form {
 .container.sign-up-mode:before {
   transform: translate(100%, -50%);
   right: 52%;
+  -webkit-transform: translate(100%, -50%);
+  -moz-transform: translate(100%, -50%);
+  -ms-transform: translate(100%, -50%);
+  -o-transform: translate(100%, -50%);
 }
 
 .container.sign-up-mode .left-panel .image,
 .container.sign-up-mode .left-panel .content {
   transform: translateX(-800px);
+  -webkit-transform: translateX(-800px);
+  -moz-transform: translateX(-800px);
+  -ms-transform: translateX(-800px);
+  -o-transform: translateX(-800px);
 }
 
 .container.sign-up-mode .signin-signup {
@@ -355,6 +363,10 @@ form.sign-in-form {
   .container.sign-up-mode .left-panel .image,
   .container.sign-up-mode .left-panel .content {
     transform: translateY(-300px);
+    -webkit-transform: translateY(-300px);
+    -moz-transform: translateY(-300px);
+    -ms-transform: translateY(-300px);
+    -o-transform: translateY(-300px);
   }
 
   .container.sign-up-mode .right-panel .image,
@@ -365,11 +377,19 @@ form.sign-in-form {
   .right-panel .image,
   .right-panel .content {
     transform: translateY(300px);
+    -webkit-transform: translateY(300px);
+    -moz-transform: translateY(300px);
+    -ms-transform: translateY(300px);
+    -o-transform: translateY(300px);
   }
 
   .container.sign-up-mode .signin-signup {
     top: 5%;
     transform: translate(-50%, 0);
+    -webkit-transform: translate(-50%, 0);
+    -moz-transform: translate(-50%, 0);
+    -ms-transform: translate(-50%, 0);
+    -o-transform: translate(-50%, 0);
   }
 }
 
