--- a/src/components/login.css
+++ b/src/components/login.css
@@ -25,6 +25,7 @@ input {
   height: 100%;
   top: 0;
   left: 0;
+  background-color: #fff;
 }
 
 .signin-signup {
@@ -105,6 +106,11 @@ form.sign-in-form {
 .social-text {
   padding: 0.7rem 0;
   font-size: 1rem;
+  font-weight: 600;
+  background-image: linear-gradient(-45deg, #ff0c0c, #6b42ff);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
 }
 
 .social-media {
@@ -135,20 +141,26 @@ form.sign-in-form {
 .btn {
   width: 150px;
   background-color: #5995fd;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   border: none;
   outline: none;
   height: 49px;
-  border-radius: 49px;
+  border-radius: 20px;
   color: #fff;
   text-transform: uppercase;
   font-weight: 600;
   margin: 10px 0;
   cursor: pointer;
-  transition: 0.5s;
+  transition: background-color 0.3s, transform 0.3s;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
 }
 
 .btn:hover {
-  background-color: #4d84e2;
+  background-color: #4d80e4;
+  transform: translateY(-2px);
 }
 .panels-container {
   position: absolute;
@@ -166,16 +178,16 @@ form.sign-in-form {
   height: 2000px;
   width: 2000px;
   top: -10%;
-  right: 48%;
+  right: 40%;
   transform: translateY(-50%);
-  background-image: linear-gradient(-45deg, #4481eb 0%, #04befe 100%);
+  background-image: linear-gradient(-45deg, #001646 0%, #470000 100%);
   transition: 1.8s ease-in-out;
   border-radius: 50%;
   z-index: 6;
 }
 
 .image {
-  width: 100%;
+  width: 80%;
   transition: transform 1.1s ease-in-out;
   transition-delay: 0.4s;
 }
@@ -191,12 +203,18 @@ form.sign-in-form {
 
 .left-panel {
   pointer-events: all;
-  padding: 3rem 17% 2rem 12%;
+  padding: 3rem 0 2rem 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .right-panel {
   pointer-events: none;
-  padding: 3rem 12% 2rem 17%;
+  padding: 3rem 0 2rem 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .panel .content {
@@ -217,13 +235,16 @@ form.sign-in-form {
 }
 
 .btn.transparent {
-  margin: 0;
+  margin: 0 auto;
+  display: block;
   background: none;
   border: 2px solid #fff;
-  width: 130px;
-  height: 41px;
   font-weight: 600;
   font-size: 0.8rem;
+  padding: 1rem 2rem;
+  line-height: 1.5;
+  height: 4rem;
+  width: 10rem;
 }
 
 .right-panel .image,
@@ -235,7 +256,7 @@ form.sign-in-form {
 
 .container.sign-up-mode:before {
   transform: translate(100%, -50%);
-  right: 52%;
+  right: 60%;
   -webkit-transform: translate(100%, -50%);
   -moz-transform: translate(100%, -50%);
   -ms-transform: translate(100%, -50%);
@@ -338,8 +359,8 @@ form.sign-in-form {
   }
 
   .btn.transparent {
-    width: 110px;
-    height: 35px;
+    width: 150px;
+    height: 45px;
     font-size: 0.7rem;
   }
 
