--- a/src/components/style.css
+++ b/src/components/style.css
@@ -19,7 +19,6 @@ a {
   align-content: flex-start;
   width: 100%;
   height: 400px;
-  color: #eee;
 }
 .header:after {
   content: "";
@@ -46,14 +45,14 @@ a {
   transform: translateZ(0);
   background: #1b2030 url("../assets/SANQUA-2.jpg") 100% 0 no-repeat;
   background-size: 100%;
-  animation: grow 5s linear 10ms infinite;
+  animation: grow 30s linear 10ms infinite;
   transition: all 0.4s ease-in-out;
   z-index: -2;
   -webkit-transition: all 0.4s ease-in-out;
   -moz-transition: all 0.4s ease-in-out;
   -ms-transition: all 0.4s ease-in-out;
   -o-transition: all 0.4s ease-in-out;
-  -webkit-animation: grow 5s linear 10ms infinite;
+  -webkit-animation: grow 30s linear 10ms infinite;
 }
 .header a {
   color: #eee;
@@ -71,6 +70,7 @@ a {
     -o-transform: scale(1.2) translateY(-20px);
   }
 }
+
 #logoSide img {
   margin: 10px 20px;
   width: 80px;
@@ -175,6 +175,98 @@ a {
   cursor: pointer;
 }
 
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 1s;
+  -webkit-transition: opacity 1s;
+  -moz-transition: opacity 1s;
+  -ms-transition: opacity 1s;
+  -o-transition: opacity 1s;
+}
+.fade-enter,
+.fade-leave-to {
+  opacity: 0;
+}
+.confirmation-dialog {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: linear-gradient(135deg, #2a2a2a, #000000);
+  border-radius: 5px;
+  padding: 20px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+  color: #fff;
+  width: 400px;
+}
+
+.confirmation-dialog-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 15px;
+}
+.confirmation-dialog-header h2 {
+  color: red;
+  margin: 0;
+}
+
+.close-icon {
+  cursor: pointer;
+}
+
+.confirmation-dialog-content {
+  text-align: center;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.confirmation-dialog button {
+  margin-top: 10px;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+}
+
+.confirm-btn,
+.cancel-btn {
+  margin: 0 10px;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+}
+
+.confirm-btn {
+  border-radius: 20px;
+  background-color: #007bff;
+  color: #fff;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+
+.cancel-btn {
+  border-radius: 20px;
+  background-color: #dc3545;
+  color: #fff;
+}
+
+.confirm-btn:hover,
+.cancel-btn:hover {
+  opacity: 0.8;
+}
 .logo img {
   max-width: 50px;
   border: 2px solid #fff;
